# Automated_Trading_System

./: .azure-pipelines.yml  .env  .gitignore  Cargo.toml  README.md  accounts.db  conftest.py  prompt.txt  pytest.ini  requirements.txt  run.sh  test.trc
argocd/: actual-service.yaml  argocd-app.yaml  debug.sh  install.sh  login.sh
aws_gateway/: bucket_policy.json  connect_event.json  deploy.sh  gateway_cloud_formation.yaml  gateway_relay_server.py  index.html  index.tmp.html  output.json
common/: interface.py  logger.py  mq_consumer.py  pg_common.py  utils.py  wv_common.py
docker/: .env.template  .env.template.1  Dockerfile.analyser  Dockerfile.aws.gateway  Dockerfile.iv  Dockerfile.mcp.server  Dockerfile.mock.executor  Dockerfile.news.ingestor  Dockerfile.news.store  Dockerfile.python.test  Dockerfile.rabbitmq  Dockerfile.scraper  Dockerfile.stock.hub  docker-compose-ci.yml  docker-compose-dbg.yml  docker-compose-test.yml  docker-compose.yml
helm/: .helmignore  Chart.yaml  README.md  custom-values.yaml  debug-values.yaml  debug.sh  install.sh  out.yaml  rendered.yaml  runtime.yaml  upgrade.sh  values.yaml
indicators/: Cargo.toml
mcp_server/: mcp_client.py  mcp_server.py  pg_reader.py  wv_reader.py
mock_executor/: Cargo.toml  build.rs
mock_executor/proto/: mock_executor.proto
mock_executor/src/: main.rs
mock_executor2/: Cargo.toml
monitoring/: prometheus.yml
news_analyser/: agent.py  agent_mcp.py  article_analyser.py  deepseek_analyser.py  executor_proxy.py  output_schema.py  prompt.txt  prompts_template.py  test.py  tooling.py
terraform/: iam.tf  (+19 more)
(+95 files in other folders)
