[package]
name = "mock_executor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
dashmap = "5"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono"] }

[build-dependencies]
tonic-build = "0.11"
